k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: attendee
  labels:
    app.kubernetes.io/name: attendee
    app.kubernetes.io/part-of: attendee
